# UBB-Projects

./: README.md
Data Structures & Algorithms/SortedBag/: MyTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
Data Structures & Algorithms/SortedIteratedList/: ExtendedTest.cpp  SortedIteratedList.cpp  SortedIteratedList.h  testt.cpp
Data Structures & Algorithms/SortedMultiMap/: App.cpp  SMMIterator.cpp  SMMIterator.h
Data Structures & Algorithms/SortedMultiMap1/: Myitr.cpp  SMMIterator.cpp  SMMIterator.h  SortedMultiMap.cpp  myt.h  smm.cpp
Data Structures & Algorithms/SortedSet/: App.cpp  SSFixedTest.cpp  SSFixedTest.h  SortedSet.cpp  SortedSet.h  SortedSetFixed.cpp
Databases/: Indexes.sql  Insert_Delete_Update.sql  Selects.sql  Tables.sql  Tests.sql  Versioning.sql  ex1.sql  practic.sql  tESTEX.sql
Functional and Logical Programming/: Lab2 Ex3.pl  Lab3 Ex8.pl  Lab4 Ex14.pl  Lab5 Ex12 (A).lsp  Lab5 Ex14(B).lsp  Lab6 Ex15.lsp  ex.lsp  test.lsp  test_prolog.pl
Functional and Logical Programming/Project1/: main.py
Graph Algorithms/Practical_work_1/: exceptions.py  randomgraph1.txt
Graph Algorithms/Practical_work_2/: graph.py  main.py  ui.py
Graph Algorithms/Practical_work_3/: directed_graph.py  exception.py  ui.py
Graph Algorithms/Practical_work_4/: exception.py  main.py  ui.py  undirected_graph.py
Graph Algorithms/Practical_work_5/: directed_graph.py  test1  ui.py
Parallel and Distributed Programming/pdp_lab1/: CMakeLists.txt  Manager.cpp  (+4 more)
Parallel and Distributed Programming/pdp_lab7/: CMakeLists.txt  main.cpp
(+50 files in other folders)
